# api/interface.go
@@ -1,4 +1,11 @@
 package api
 
-type MemberlService interface {
+import (
+	"context"
+
+	"oracle.com/oracle/my-go-oracle-app/service/member"
+)
+
+type MemberService interface {
+	FindById(ctx context.Context, id int64) (member.MemberResponse, error)
 }
